--- a/pom.xml
+++ b/pom.xml
@@ -245,7 +245,7 @@
       <id>jruby-release</id>
       <activation>
         <property>
-          <name>performRelease</name>
+          <name>release</name>
           <value>true</value>
         </property>
       </activation>
