Add Rubinius thread spec to build
git-svn-id: http://svn.codehaus.org/jruby/trunk/jruby@5119 961051c9-f516-0410-bf72-c9f7e237a7b7

--- a/build.xml
+++ b/build.xml
@@ -399,6 +399,7 @@ test/externals/rubinius/spec/core/regexp_spec.rb
 test/externals/rubinius/spec/core/struct_spec.rb
 test/externals/rubinius/spec/core/symbol_spec.rb
 test/externals/rubinius/spec/core/time_spec.rb
+test/externals/rubinius/spec/core/thread_spec.rb
 test/externals/rubinius/spec/core/true_spec.rb
 test/externals/rubinius/spec/language/assignment_spec.rb
 test/externals/rubinius/spec/language/class_spec.rb
