Make -v show 1.9.1 if running in 1.9 compatibility mode
git-svn-id: http://svn.codehaus.org/jruby/trunk/jruby@5128 961051c9-f516-0410-bf72-c9f7e237a7b7

--- a/src/jruby.properties
+++ b/src/jruby.properties
@@ -1,5 +1,7 @@
 version.ruby.major=1.8
 version.ruby=1.8.5
+version.ruby1_9.major=1.9
+version.ruby1_9=1.9.1
 release.date=@build.date@
 version.jruby=1.1b1
 build.jruby=java@java.specification.version@
