Oh, fer *-sake. Don't fail if I can't complete a dist-clean b/c the directory doesn't exist yet
git-svn-id: http://svn.codehaus.org/jruby/trunk/jruby@5159 961051c9-f516-0410-bf72-c9f7e237a7b7

--- a/build.xml
+++ b/build.xml
@@ -794,7 +794,7 @@ test/externals/rubinius/spec/parser"/>
   <target name="dist" depends="dist-bin,dist-src"/>
 
   <target name="dist-clean">
-    <delete includeEmptyDirs="true">
+    <delete includeEmptyDirs="true" quiet="true">
       <fileset dir=".">
         <include name="jruby-*.tar.gz"/>
         <include name="jruby-*.zip"/>
