--- a/maven/jruby-rake-plugin/pom.xml
+++ b/maven/jruby-rake-plugin/pom.xml
@@ -3,14 +3,14 @@
   <parent>
     <groupId>org.jruby</groupId>
     <artifactId>shared</artifactId>
-    <version>1.0.3-SNAPSHOT</version>
+    <version>1.0.3</version>
     <relativePath>../../pom.xml</relativePath>
   </parent>
   <modelVersion>4.0.0</modelVersion>
   <groupId>org.jruby.plugins</groupId>
   <artifactId>jruby-rake-plugin</artifactId>
   <packaging>maven-plugin</packaging>
-  <version>1.0.3-SNAPSHOT</version>
+  <version>1.0.3</version>
   <name>JRuby Rake Plugin</name>
   <dependencies>
     <dependency>
