--- a/.classpath
+++ b/.classpath
@@ -13,5 +13,6 @@
 	<classpathentry kind="lib" path="build_lib/asm-3.0.jar"/>
 	<classpathentry kind="lib" path="build_lib/asm-tree-3.0.jar"/>
 	<classpathentry kind="lib" path="build_lib/asm-analysis-3.0.jar"/>
+	<classpathentry kind="lib" path="build_lib/joni.jar"/>
 	<classpathentry kind="output" path="build/classes/jruby"/>
 </classpath>
