--- a/.classpath
+++ b/.classpath
@@ -14,5 +14,6 @@
 	<classpathentry kind="lib" path="build_lib/asm-tree-3.0.jar"/>
 	<classpathentry kind="lib" path="build_lib/asm-analysis-3.0.jar"/>
 	<classpathentry kind="lib" path="build_lib/joni.jar"/>
+	<classpathentry kind="lib" path="build_lib/joda-time-1.5.1.jar"/>
 	<classpathentry kind="output" path="build/classes/jruby"/>
 </classpath>
